nav on mobile visual fix

--- a/src/css/nav/nav.scss
+++ b/src/css/nav/nav.scss
@@ -67,6 +67,7 @@
             left: 0;
             width: 100vw;
             backdrop-filter: blur(50px);
+            background: var(--bg-opacity-300);
             padding: 1rem 2rem !important;
             border-bottom: solid 1px var(--border-2);
 
