--- a/src/css/sections/presentation/presentation.css
+++ b/src/css/sections/presentation/presentation.css
@@ -22,7 +22,6 @@
   align-items: center;
 }
 .presentation .corona {
-  background-size: cover;
   min-width: 150px;
   width: 15vw;
   min-height: 120px;
